# GroundingGrid

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hub.md  manim_scene.py  pyproject.toml  requirements.txt  test.sh
cpp/: example.cpp
fafa/: LICENSE  pyproject.toml
groundinggrid/: __init__.py
src/: __init__.py  _core.pyi  handlers.py
tests/: aa.py  test_grid.py
