[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "groundinggrid"
authors = [{name = "Filip Dimitrovski", email = "filip.dimitrovski@visiocue.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = ["openai>=1.55.0", "Pillow", "fastapi", "tqdm", "pytest-benchmark", "google-generativeai>=0.8.0", "pytest", "black"]

[project.urls]
Home = "https://visiocue.com"
